
                              Kiji Scoring Release Notes

Version 0.13.0
    * SCORE-166. Adds a JpmmlScoreFunction for scoring trained JPMML compliant models.

Version 0.11.0
    * SCORE-148. kiji batch-score is a new command line tool for running ScoreFunctions in batch.
    * SCORE-147. ScoreFunctionJobBuilder now supports running ScoreFunctions in batch without the
        need for a KijiProducer wrapper.

Version 0.10.0
    * SCORE-125. FreshRequestOptions now supports disabling individual columns to prevent them from
        being freshened by this corresponding request. To disable all columns, use the marked value
        DISABLE_ALL_COLUMNS found in FreshRequestOptions.
    * SCORE-139. KijiFreshnessPolicy now includes static constants named FRESH and STALE which can
        be returned from isFresh() to indicate that the data read was fresh or stale respectively.
    * SCORE-135. kiji-scoring-server has been removed from kiji-scoring to avoid a circular
        dependency. It now lives in its own project at github.com/kijiproject/kiji-scoring-server.

Version 0.9.0
    * SCORE-130. Adds a mutable, per thread kvstore to scoring server.

Version 0.8.0
    * SCORE-120. FreshKijiTableReader now supports providing an ExecutorService to use as the
        thread pool backing the reader. If unspecified, the reader will use the singleton service
        defined in FreshenerThreadPool.

Version 0.7.0
    * SCORE-128. InternalFreshKijiTableReader now uses a reader pool to read data to check for
        freshness and score in order to guarantee thread safety. The pool size defaults to the same
        as the FreshenerThreadPool size.
    * SCORE-118. InternalFreshKijiTableReader now includes DEBUG level log messages for important
        events. Enable these messages through your slf4j configuration.
    * SCORE-117. ScoreFunction.score() now returns a TimestampedValue which optionally specifies the
        timestamp at which the value should be written to Kiji.